# nexus_framework

./: .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  Dockerfile.ros2  Dockerfile.veins  README.md  custom_path_test.py  docker-compose.generated.yml  docker-compose.yml  nexus.py  nexus.yaml  pyproject.toml  requirements.txt  wheel_config.ini
archive/: custom_path_test.py
core/: data_models.py  factory.py  nexus_engine.py
core/interfaces/: controller.py  perception.py  planner.py  simulator.py
docker/: Dockerfile.carla  Dockerfile.ros2  Dockerfile.webots
hardware/: wheel_config.ini
modules/control/: dummy_controller.py  pid_controller.py
modules/hardware_input/: module.py
modules/localization/: vehicle_state.py
modules/perception/: carla_perception.py  ground_truth.py
modules/planning/: simple_planner.py  sinusoidal_waypoints.py
modules/simulator/: carla_bridge.py
nexus/bridge/: loop.py  node.py
nexus/cli/: main.py
nexus/config/: loader.py  schema.py
nexus/core/: base_module.py  base_simulator.py  registry.py  translator.py  types.py
nexus/orchestrator/: composer.py
nexus_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
projects/custom_path_migration/: nexus.yaml
projects/my_first_project/: nexus.yaml
projects/webots_lidar_demo/: nexus.yaml
requirements/: ai.txt  base.txt  carla.txt  dev.txt  ros2.txt  webots.txt
tests/: test_base_module.py  test_base_simulator.py  test_carla_translator.py  test_config_schema.py  test_translator.py  test_types.py
(+25 files in other folders)
