[project]
name = "nexus-framework"
version = "0.1.0"
description = "Modular, simulator-agnostic CCAM simulation framework"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "structlog>=24.0",
    "numpy>=1.24",
    "pygame>=2.6",
]

[project.scripts]
nexus = "nexus.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus*", "modules*", "simulators*"]
exclude = ["tests*", "archive*", "projects*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["archive/"]
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
